force-app/main/default/objects/VehicleModel__c/VehicleModel__c.object-meta.xml
<CustomObject>
    <description>시승 가능한 모델
시승 가능 여부, 모델별 가능 시승 방법(동승, 셀프), 가능한 거점 저장 정보</description>
    <label>시승 모델</label>
    <nameField>
        <label>시승 모델 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>시승 모델</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>