force-app/main/default/objects/VehicleModel__c/fields/AllowTestDrive__c.field-meta.xml
<CustomField>
    <fullName>AllowTestDrive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>시승 가능 여부</label>
    <type>Checkbox</type>
</CustomField>