force-app/main/default/objects/VehicleModel__c/fields/DriveMethod__c.field-meta.xml
<CustomField>
    <fullName>DriveMethod__c</fullName>
    <label>시승 방법</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>staff</fullName>
            </value>
            <value>
                <fullName>self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>