force-app/main/default/objects/VehicleModel__c/fields/EligibleStore__c.field-meta.xml
<CustomField>
    <fullName>EligibleStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>시승 가능한 거점</inlineHelpText>
    <label>플래그십 스토어</label>
    <referenceTo>Flagship_Store__c</referenceTo>
    <relationshipLabel>시승 모델</relationshipLabel>
    <relationshipName>TestDriveModel</relationshipName>
    <type>Lookup</type>
</CustomField>